# trmnl-teslamate-reporter

./: Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-ghcr.yml
