[project]
name = "trmnl-teslamate-reporter"
version = "0.1.0"
description = "Report Teslamate data for display on a TRMNL device"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]
